--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Geist&display=swap');
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
