--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Intro from '../components/Intro.tsx';
 import BlogList from '../components/blog/BlogList.tsx';
-import { blogs } from '../data/blogs';
 ---
 
 <Layout title="Deepak's Portfolio - Software Engineer">
   <Header />
   <main>
     <Intro client:load />
-    <BlogList blogs={blogs} client:load />
+    <BlogList client:load />
   </main>
 </Layout> 
