--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -16,7 +16,7 @@ const { blog } = Astro.props;
 
 <Layout title={`${blog.title} - Deepak's Blog`} description={blog.description}>
   <Header />
-  <main class="w-full bg-white dark:bg-gray-900 min-h-[calc(100vh-80px)]">
+  <main class="w-full bg-[#0a0a0a] min-h-[calc(100vh-80px)]">
     <BlogDetail blog={blog} client:load />
   </main>
 </Layout> 
